<resources>
    <string name="app_name">HealthMate</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">LogIn</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create one</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_is_your_goal">What is your goal?</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="not_very_active_n_spend_most_of_the_day_sitting">Not very active\nSpend most of the day sitting</string>
    <string name="lightly_active_n_spend_a_good_part_of_the_day_on_your_feet">Lightly active\nSpend a good part of the day on your feet</string>
    <string name="active_nspend_a_good_part_of_the_day_doing_some_physical_activity">Active\nSpend a good part of the day doing some physical activity</string>
    <string name="very_active_nspend_most_of_the_day_doing_heavy_physical_activity">Very active\nSpend most of the day doing heavy physical activity</string>
    <string name="how_active_are_you">How active are you?</string>
    <string name="i_am">I AM</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="when_where_you_born">When where you born?</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="how_much_do_you_weigh">How much do you weigh? (Kg)</string>
    <string name="what_is_your_goal_weight">What is your goal weight? (Kg)</string>
    <string name="how_tall_are_you_cm">How tall are you? (Cm)</string>
    <string name="sign_up">Sign Up</string>
    <string name="maintain">maintain</string>
    <string name="lose">lose</string>
    <string name="gain">gain</string>
    <string name="not_active">not active</string>
    <string name="lightly_active">lightly active</string>
    <string name="active">active</string>
    <string name="very_active">very active</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="select_birthdate">Select birthdate</string>
    <string name="enter_password">Please enter a password</string>
    <string name="enter_email">Please add a valid email</string>
    <string name="passwords_dont_match">The two passwords do not match!</string>
    <string name="password_too_short">Password must have at least 6 characters!</string>
    <string name="signup_error">Error while trying to sign up</string>
    <string name="verify_email">Signed up successfully! Verify your email</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="choose_option">Please choose an option!</string>
    <string name="select_gender">Please select the gender you mostly identify with</string>
    <string name="pick_birthdate">Please select your birth date!</string>
    <string name="supply_values">Please supply values for all the fields!</string>
    <string name="name">Name</string>
    <string name="insert_name">Please insert your name</string>
    <string name="input_water">Input water</string>
    <string name="water_textview">Total so far: </string>
    <string name="ml">ml</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="how_much_water_did_you_drink">How much water did you drink?</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="recipes">Recipes</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="choose_photo_from">Choose photo from</string>
    <string name="height">Height \u0020</string>
    <string name="current_weight">Current weight \u0020</string>
    <string name="goal_weight">Goal weight \u0020</string>
    <string name="goal">Goal</string>
    <string name="activity_level">Activity level</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="how_old_are_you">How old are you?</string>
    <string name="gender_you_identify_with">The gender you mostly identify with</string>
    <string name="what_is_your_activity_level">What is your activity level?</string>
    <string name="how_much_do_you_weigh_right_now">How much do you weigh right now?</string>
    <string name="please_insert_age">Please insert your age!</string>
    <string name="wake_up">Wake up \u0020</string>
    <string name="bedtime">Bedtime</string>
    <string name="filter">Filter</string>
    <string name="no_results_found">No results found!</string>
    <string name="burned">BURNED</string>
    <string name="eaten">EATEN</string>
    <string name="calories_main">CALORIES</string>
    <string name="water">Water</string>
    <string name="sleep">Sleep</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logout_confirm">Yes, log me out</string>
    <string name="enter_amount">Enter amount</string>
    <string name="calories">calories</string>
    <string name="type_in_the_amount">type in the amount</string>
    <string name="determine_total_calories">Determine total calories</string>
    <string name="i_want_to_wake_up_at">I want to wake up at...</string>
    <string name="select_time">Select time</string>
    <string name="i_want_to_go_to_sleep_at">I want to go to sleep at...</string>
    <string name="please_add_your_email">Please add your email</string>
    <string name="please_add_your_password">Please add your password</string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="need_some_sleep_advice">Need some sleep advice?</string>
    <string name="statistics">Statistics</string>
    <string name="protein">PROTEIN</string>
    <string name="fat">FAT</string>
    <string name="carbs">CARBS</string>
    <string name="for_how_long_have_you_performed_this_exercise_mins">For how long have you performed this exercise? (mins)</string>
    <string name="for_how_long_minutes">For how long? (minutes)</string>
    <string name="weight_history">Weight History</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="your_weight_in_kgs">Your weight (in kgs)</string>
    <string name="select_a_date">Select a date</string>
    <string name="provide_weight">Please provide a value for the weight!</string>
    <string name="provide_date">Please select a date!</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="notifications">Notifications</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
    <string name="scan">Scan</string>
    <string name="water_history">Water History</string>
    <string name="sleep_history">Sleep History</string>
    <string name="health_advice_statistics">For a healthy lifestyle, you should aim for a 45-30-25 carbs-protein fat ratio</string>
</resources>
