<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_recipes"
            android:title="@string/recipes" />
        <item
            android:id="@+id/nav_water"
            android:icon="@drawable/ic_water_black"
            android:title="@string/water" />

        <item
            android:id="@+id/nav_sleep"
            android:icon="@drawable/ic_sleep_black"
            android:title="@string/sleep" />

        <item android:id="@+id/nav_weight"
            android:icon="@drawable/ic_scale"
            android:title="@string/weight_history"/>

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics"/>


        <item
            android:id="@+id/nav_deleteaccount"
            android:icon="@drawable/ic_priority_high"
            android:title="@string/delete_my_account"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/logout" />
    </group>


</menu>
