<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".screens.profile.EditProfileActivity">

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_name"
            style="@style/cardview_editprofile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    style="@style/textview_editprofile"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/textview_name"
                    style="@style/textview_editprofile2" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_age"
            style="@style/cardview_editprofile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    style="@style/textview_editprofile"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/textview_age"
                    style="@style/textview_editprofile2" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_gender"
            style="@style/cardview_editprofile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    style="@style/textview_editprofile"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/textview_gender"
                    style="@style/textview_editprofile2" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_goal"
            style="@style/cardview_editprofile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    style="@style/textview_editprofile"
                    android:text="@string/goal" />

                <TextView
                    android:id="@+id/textview_goal"
                    style="@style/textview_editprofile2" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_activitylevel"
            style="@style/cardview_editprofile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    style="@style/textview_editprofile"
                    android:text="@string/activity_level" />

                <TextView
                    android:id="@+id/textview_activitylevel"
                    style="@style/textview_editprofile2" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_currentweight"
            style="@style/cardview_editprofile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    style="@style/textview_editprofile"
                    android:text="@string/current_weight" />

                <TextView
                    android:id="@+id/textview_currentweight"
                    style="@style/textview_editprofile2" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_goalweight"
            style="@style/cardview_editprofile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    style="@style/textview_editprofile"
                    android:text="@string/goal_weight" />

                <TextView
                    android:id="@+id/textview_goalweight"
                    style="@style/textview_editprofile2" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_height"
            style="@style/cardview_editprofile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    style="@style/textview_editprofile"
                    android:text="@string/height" />

                <TextView
                    android:id="@+id/textview_height"
                    style="@style/textview_editprofile2" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btn_save"
            style="@style/button_water"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>